--- a/app/public/assets/css/styles.css
+++ b/app/public/assets/css/styles.css
@@ -8129,7 +8129,18 @@ textarea.form-control-lg {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-primary-rgb), var(--bs-bg-opacity)) !important;
 }
-
+.bg-amf {
+  --bs-bg-opacity: 1;
+  background-color: rgba(117, 172, 52) !important;
+}
+.bg-amb {
+  --bs-bg-opacity: 1;
+  background-color: rgba(20, 20, 20) !important;
+}
+.bg-amb2 {
+  --bs-bg-opacity: 1;
+  background-color: rgba(80, 80, 80) !important;
+}
 .bg-secondary {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-secondary-rgb), var(--bs-bg-opacity)) !important;
@@ -10853,7 +10864,7 @@ html {
 }
 .divider-custom .divider-custom-line {
   width: 100%;
-  max-width: 7rem;
+  max-width: 50rem;
   height: 0.25rem;
   background-color: #2c3e50;
   border-radius: 1rem;
